# Pi-Crop-AI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  main.py  pyproject.toml  streamlit_app.py
config/: agent.yaml  database.yaml  deployment.yaml  model.yaml  sensors.yaml  system_config.yaml
crop_agent/: __init__.py  utils.py
crop_agent/agent/: crop_agent.py  planner.py  safety_validator.py
crop_agent/llm/: __init__.py  llm_client.py  model_backends.py  prompt_loader.py  prompt_runner.py  response_parser.py
crop_agent/memory/: __init__.py  embedder.py  metadata_store.py  vector_store.py
crop_agent/perception/: disease_detector.py  severity_estimator.py
scripts/: close_cv_windows.py  ingest_knowledge.py  remove_bg.py  test_agent.py  test_llm.py  test_severity_estimator.py
