[project]
name = "pi-crop-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "faiss-cpu>=1.13.2",
    "opencv-python<4.13",
    "rembg[cpu]<2.0.72",
    "sentence-transformers>=5.2.3",
    "tensorflow==2.15",
    "tflite-runtime>=2.14.0",
    "pyngrok>=7.5.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crop_agent"]
